--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^6.6.1",
     "http-auth": "^4.1.2",
     "jade-bootstrap": "^1.0.14",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
     "pug": "^3.0.0",
     "url-search-params": "^1.1.0"
